# svd-sentinel

./: .gitignore  2_SVD_SENTINEL_SPEC.md  DECISIONS.md  FABLE_REVIEW.md  LOOP_ADAPTER.md  PROGRESS.md  PROGRESS.template.md  QUESTIONS.md  README.md  REVIEW.md  auto-review-loop.sh  claude-loop.ps1  claude-loop.sh  pyproject.toml
data/: NOTES.md
src/svdsentinel/: __init__.py
src/svdsentinel/model/: __init__.py  loader.py
tests/: test_model_loader.py
tests/fixtures/: cluster.svd  dim_array.svd  enumerated_values.svd  no_access_anywhere.svd
