[project]
name = "svdsentinel"
version = "0.1.0"
description = "Deterministic static checker verifying C register access against CMSIS-SVD ground truth"
requires-python = ">=3.11"
dependencies = [
    "cmsis-svd>=0.5",
    "tree-sitter>=0.21",
    "tree-sitter-c>=0.21",
    "pydantic>=2",
    "typer>=0.12",
    "jinja2>=3.1",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.100",
    "pytest>=8.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
sentinel = "svdsentinel.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
